# twotter-be

./: Cargo.toml  README.md  Rocket.toml
migrations/2021-01-02-231921_users/: up.sql
migrations/2021-01-04-162627_twoots/: down.sql  up.sql
migrations/2021-01-16-122743_rename_user_to_account/: down.sql  up.sql
migrations/2021-01-16-132110_add_uuid_to_twoot/: down.sql  up.sql
migrations/2021-01-16-203513_add_indices_to_twoot/: down.sql  up.sql
src/: errors.rs  lib.rs  main.rs  models.rs  schema.rs  users.rs
