[package]
name = "twotter-be"
version = "0.1.0"
authors = ["Robin van Leeuwen <robin@mintlab.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel        = { version="1.4.5", features=["postgres"] }
serde         = { version="1.0.118", features=["derive"]}
dotenv        = "0.15.0"
r2d2_postgres = "0.18.0"
r2d2          = "0.8.9"
serde_json    = "1.0.61"
rocket        = "0.4.6"
custom_error  = "1.8.0"
rocket_cors   = "0.5.2"
pear_codegen  = "0.2.0"

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["diesel_postgres_pool", "json"]